--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 NEXTAUTH_SECRET=v55f7ogbfvJc1yVcKnuf4tEIrS6lw0KLeet2baBKAZg1
-#NEXT_PUBLIC_API_BASE_URL="https://flexemart.com"
+NEXT_PUBLIC_API_BASE_URL="https://flexemart.com"
+#NEXT_PUBLIC_API_BASE_URL="https://localhost:7078"
 NEXT_PUBLIC_API_BASE_URLProduction="https://flexemart.com"
-# NEXT_PUBLIC_API_BASE_URL="https://localhost:7078"
-NEXT_PUBLIC_API_BASE_URL="https://localhost:7078"
 NEXT_PUBLIC_BASE_Search_Service_URL = "https://search.flexemart.com"
 NEXT_PUBLIC_BASE_IMAGE_URL="https://flexemart.com/uploads"
 NEXT_PUBLIC_BASE_IMAGE_URL_Upload="https://flexemart.com/api/Media/upload"
