--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
