--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
+    "quill-image-resize": "^3.0.9",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.1.0",
